--- a/arduinobot_py_examples/package.xml
+++ b/arduinobot_py_examples/package.xml
@@ -7,9 +7,10 @@
   <maintainer email="matthew.furkert@gmail.com">furky</maintainer>
   <license>TODO: License declaration</license>
 
-  <depend>rclpy</depend>
-  <depend>std_msgs</depend>
-  <depend>rcl_interfaces</depend>
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>rcl_interfaces</exec_depend>
+  <exec_depend>arduinobot_interfaces</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
