--- a/arduinobot_controller/package.xml
+++ b/arduinobot_controller/package.xml
@@ -4,10 +4,16 @@
   <name>arduinobot_controller</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="matthew.furkert@gmail.com">furky</maintainer>
+  <maintainer email="furky@todo.todo">furky</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <depend>rclcpp</depend>
+  <depend>rclcpp_lifecycle</depend>
+  <depend>hardware_interface</depend>
+  <depend>pluginlib</depend>
+  <depend>libserial-dev</depend>
 
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>rosbot_state_publisher</exec_depend>
