--- a/arduinobot_interfaces/CMakeLists.txt
+++ b/arduinobot_interfaces/CMakeLists.txt
@@ -14,6 +14,8 @@ rosidl_generate_interfaces(${PROJECT_NAME}
     "srv/AddTwoInts.srv"
     "srv/EulerToQuaternion.srv"
     "srv/QuaternionToEuler.srv"
+    "action/Fibonacci.action"
+    "action/ArduinobotTask.action"
 )
 
 ament_package()
