--- a/arduinobot_py_examples/package.xml
+++ b/arduinobot_py_examples/package.xml
@@ -11,6 +11,8 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>rcl_interfaces</exec_depend>
   <exec_depend>arduinobot_interfaces</exec_depend>
+  <exec_depend>ros2launch</exec_depend>
+  <exec_depend>moveit_py</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
