--- a/arduinobot_utils/package.xml
+++ b/arduinobot_utils/package.xml
@@ -10,8 +10,10 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_python</buildtool_depend>
 
+  <depend>rclcpp</depend>
   <depend>rclpy</depend>
   <depend>arduinobot_interfaces</depend>
+  <depend>tf2</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
